[gd_scene load_steps=27 format=3 uid="uid://bnluf0hdvqf3e"]

[ext_resource type="Script" uid="uid://bh6r57qph2vnr" path="res://scripts/Tutorial/mainTutorial.gd" id="1_ej4tf"]
[ext_resource type="Texture2D" uid="uid://en21l55q56c" path="res://assets/images2/tutorialBg.png" id="2_ej4tf"]
[ext_resource type="PackedScene" uid="uid://cmsiy2mwp0vgn" path="res://scenes/CardSlotTutorial.tscn" id="3_tbcdj"]
[ext_resource type="Script" uid="uid://dppnn7bhj616n" path="res://scripts/Tutorial/cardSlotTutorial.gd" id="4_ej4tf"]
[ext_resource type="Script" uid="uid://dh12oswoie4rs" path="res://scripts/eraOne/cardManager.gd" id="5_vrdqu"]
[ext_resource type="Script" uid="uid://c44egv1jlxjyg" path="res://scripts/eraOne/playerHand.gd" id="6_cmspm"]
[ext_resource type="Script" uid="uid://bip7hv0c652mm" path="res://scripts/eraOne/deck.gd" id="7_ikfo1"]
[ext_resource type="Texture2D" uid="uid://cwnqri6l7wwiy" path="res://assets/images2/_8EF5FA7C-6356-4BDA-AB74-23D32B1816DD_-removebg-preview.png" id="8_dwom6"]
[ext_resource type="Script" uid="uid://bw37wu5hoaijs" path="res://scripts/eraOne/input_manager.gd" id="9_bl2xa"]
[ext_resource type="Texture2D" uid="uid://1f6b24pjwa4d" path="res://assets/images2/Under.png" id="10_15kfc"]
[ext_resource type="Texture2D" uid="uid://d4i2dkqek2qv3" path="res://assets/images2/Progress.png" id="11_7a100"]
[ext_resource type="Script" uid="uid://bgyhse4hp6qvj" path="res://scripts/texture_progress_bar.gd" id="12_feaue"]
[ext_resource type="AudioStream" uid="uid://b72tfbhsm7bdi" path="res://assets/music/hidden_temple.wav" id="13_210s6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6xl0"]
size = Vector2(330, 455)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
bg_color = Color(0.43605796, 8.663535e-07, 1.6845763e-07, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y0u"]
bg_color = Color(0.69919544, 2.0816549e-06, 6.738305e-07, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkv2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muem4"]
bg_color = Color(0.3032328, 0.30323285, 0.30323276, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
bg_color = Color(0.45452422, 0.45452428, 0.45452416, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld40"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqmmt"]
bg_color = Color(0.24454394, 0.1366652, 0.02952511, 0.6745098)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.10574625, 0.050342955, 0.005513889, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc10j"]
bg_color = Color(0.18431373, 0.09803922, 0.015686275, 0.83137256)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.105882354, 0.050980393, 0.003921569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jscy8"]
bg_color = Color(0.25882354, 0.14509805, 0.03137255, 0.8)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.105882354, 0.050980393, 0.003921569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ej4tf")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
layout_mode = 0
offset_left = -464.0
offset_top = -11.0
offset_right = 2263.5
offset_bottom = 1080.0
texture = ExtResource("2_ej4tf")
expand_mode = 3

[node name="cardSlotTutorial" parent="." instance=ExtResource("3_tbcdj")]
script = ExtResource("4_ej4tf")

[node name="cardManager" type="Node2D" parent="."]
script = ExtResource("5_vrdqu")

[node name="Hand" type="Node2D" parent="."]
script = ExtResource("6_cmspm")

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(150, 890)
scale = Vector2(0.65, 0.65)
script = ExtResource("7_ikfo1")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("8_dwom6")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_o6xl0")

[node name="inputManager" type="Node2D" parent="."]
script = ExtResource("9_bl2xa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.075
anchor_right = 0.5
anchor_bottom = 0.075
offset_left = -480.0
offset_top = -50.0
offset_right = 505.0
offset_bottom = 51.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 120.0
step = 0.01
value = 60.0
texture_under = ExtResource("10_15kfc")
texture_progress = ExtResource("11_7a100")
script = ExtResource("12_feaue")
total_time = 60.0

[node name="Countdown" type="Node" parent="."]

[node name="countdownLabel" type="Label" parent="Countdown"]
modulate = Color(0.17492661, 0.14104345, 0.030845482, 1)
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="Countdown"]
wait_time = 60.5

[node name="Options" type="Panel" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -220.25
offset_right = 404.0
offset_bottom = 220.25
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(404, 220.25)

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 98.25
grow_horizontal = 2
theme_override_font_sizes/font_size = 51
text = "Pause
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 318.0
offset_top = -427.25
offset_right = 389.0
offset_bottom = -358.25
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eb6dy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_trceg")
theme_override_styles/hover = SubResource("StyleBoxFlat_a8y0u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jkv2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jkv2x")
text = "X
"

[node name="MainMenu" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -34.5
offset_right = 169.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_jbj1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_muem4")
theme_override_styles/hover = SubResource("StyleBoxFlat_dp3eg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0ld40")
text = "Main Menu"

[node name="AmbientSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_210s6")
volume_db = -6.7
autoplay = true
bus = &"Music"

[node name="endTurn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -916.0
offset_top = 121.0
offset_right = -704.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gqmmt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0ld40")
text = "End Turn"

[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Options/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="endTurn" to="cardSlotTutorial" method="_on_end_turn_pressed"]
